--- a/app/src/main/res/layout/fragment_scheduler.xml
+++ b/app/src/main/res/layout/fragment_scheduler.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="cnu.mobilesoftware.smartscheduler.Fragment.SchedulerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Scheduler" />
+   <cnu.mobilesoftware.smartscheduler.KFGD_SchedulerUI.KFGD_Scheduler
+       android:id="@+id/kfgd_scheduler"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 
 </FrameLayout>
