--- a/app/src/main/res/layout/fragment_scheduler.xml
+++ b/app/src/main/res/layout/fragment_scheduler.xml
@@ -3,10 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cnu.mobilesoftware.smartscheduler.Fragment.SchedulerFragment">
-
    <cnu.mobilesoftware.smartscheduler.KFGD_SchedulerUI.KFGD_Scheduler
-       android:id="@+id/kfgd_scheduler"
+       android:id="@+id/scheduler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
-
 </FrameLayout>
