Insert Data in Scheduler(Not Link DB)

--- a/app/src/main/res/layout/activity_insert_schedule.xml
+++ b/app/src/main/res/layout/activity_insert_schedule.xml
@@ -48,6 +48,13 @@
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="교수님: "/>
         <EditText android:id="@+id/et_professor" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="색깔: "/>
+        <EditText android:id="@+id/et_colorOfCell" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
