--- a/app/src/main/res/layout/activity_insert_schedule.xml
+++ b/app/src/main/res/layout/activity_insert_schedule.xml
@@ -8,53 +8,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cnu.mobilesoftware.smartscheduler.InsertScheduleActivity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <TextView android:id="@+id/tv_day" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="요일"/>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <EditText android:id="@+id/et_startTime" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="교시 - "/>
-        <EditText android:id="@+id/et_endTime" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="교시"/>
-    </LinearLayout>
+    <include layout="@layout/content_schedule" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="수업: "/>
-        <EditText android:id="@+id/et_subjectName" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="강의실: "/>
-        <EditText android:id="@+id/et_classNum" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="교수님: "/>
-        <EditText android:id="@+id/et_professor" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="색깔: "/>
-        <EditText android:id="@+id/et_colorOfCell" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="1"/>
-    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
