--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/color_ffffff" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
+    android:gravity="center"
+    android:padding="10dp"
+    tools:context="cnu.mobilesoftware.smartscheduler.MainActivity">
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/color_21a4ff"
-        android:gravity="center_vertical"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/main_memo"
         android:paddingLeft="10dp"
-        android:textColor="@color/color_ffffff"
-        android:textSize="20sp" />
+        android:paddingRight="10dp"
+        android:gravity="center">
 
-    <GridView
-        android:layout_marginTop="10dp"
-        android:id="@+id/gridview"
-        android:layout_weight="1"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:numColumns="7"
-        android:listSelector="@color/transparent"
-        >
-    </GridView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:minWidth="250dp">
+            <TextView
+                android:id="@+id/memo_text"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:textColor="#FFFFFF"
+                android:gravity="center_vertical"/>
+            <ImageButton
+                android:id="@+id/memo_btn"
+                android:background="@null"
+                android:src="@android:drawable/ic_menu_edit"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+        </LinearLayout>
 
-</LinearLayout>
-
+    </LinearLayout>
+</FrameLayout>
