--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -30,15 +30,6 @@
         android:layout_marginTop="250dp"
         android:id="@+id/showList">
 
-
-        <Button
-            android:text="달력보기"
-            android:layout_gravity="right"
-            android:layout_width="83dp"
-            android:layout_height="32dp"
-            android:onClick="onClickShowCalendar"
-            android:id="@+id/buttonShowCalendar" />
-
         <ListView
 
             android:layout_width="wrap_content"
@@ -47,5 +38,12 @@
             android:layout_centerHorizontal="true"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="이동"
+        android:onClick="onClickGroupPage"
+        android:layout_gravity="center_horizontal|bottom"/>
 
 </FrameLayout>
