--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="SelectedCell_padding">3dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
 </resources>
