--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,14 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="color_ffffff">#64B5F6</color>
-    <color name="color_21a4ff">#21A4FF</color>
-    <color name="color_000000">#000000</color>
-    <!--<color name="transparent">#00000000</color>-->
+    <!--com.imanoweb.calendarview.CustomCalendarView Attributes-->
+    <color name="white">#FFFFFF</color>
+    <color name="red">#f00</color>
+    <color name="blue">#009de0</color>
+    <color name="black">#000000</color>
+    <color name="off_white">#f1f5f7</color>
+    <color name="blue_selector">#00aeea</color>
+    <color name="red_negative_progress">#ff3333</color>
+    <color name="gray">#757575</color>
+
 </resources>
