--- a/app/src/main/res/layout/activity_group_detail.xml
+++ b/app/src/main/res/layout/activity_group_detail.xml
@@ -69,13 +69,13 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Title"
+                        android:text="일정"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/group_notice"/>
+                        android:text="@string/group_schedule"/>
 
                 </LinearLayout>
 
@@ -96,13 +96,13 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Result"
+                        android:text="공지"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/group_member"/>
+                        android:text="@string/group_notice"/>
 
                 </LinearLayout>
 
@@ -123,7 +123,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Strategy"
+                        android:text="게시물"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                     <TextView
