--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -22,7 +22,7 @@
         android:id="@+id/item_ib_clear"
         android:background="#00FFFFFF"
         android:layout_margin="10dp"
-        android:src="@drawable/ic_clear_white_24dp"
+        android:src="@drawable/ic_exit_to_app_white_24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"/>
@@ -32,5 +32,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Group_Title"/>
+        android:text="Group_Title"
+        android:textSize="15dp"/>
 </android.support.v7.widget.CardView>
