--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,9 @@
         <item name="colorPrimaryDark">#E91E63</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
+        <item name="dialogTheme">@style/AppTheme.Dialog</item>
+        <item name="alertDialogTheme">@style/AppTheme.Dialog.Alert</item>
     </style>
 
     <!--Style: CardView-->
@@ -25,11 +28,20 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+    <!--Style: Dialog-->
+    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog">
+
+    </style>
+
     <!--Style: AlertDialog-->
-    <style name="Dialog.Alert" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="AppTheme.Dialog.Alert" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">#EC4074</item>
         <item name="android:textColorPrimary">#000000</item>
         <item name="android:background">#FFFFFF</item>
+    </style>
+
+    <style name="Widget.TextInputLayout" parent="Widget.AppCompat.EditText">
+
     </style>
 
     <style name="Theme.MaterialDesign" parent="Theme.SmartSchedulerTheme">
