--- a/app/src/main/res/layout/dialog_enter_group.xml
+++ b/app/src/main/res/layout/dialog_enter_group.xml
@@ -27,27 +27,59 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/til_group_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:counterEnabled="true"
-                app:counterMaxLength="20">
+                android:orientation="vertical"
+                android:id="@+id/linear_input_code">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tie_group_title"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_group_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/form_group_title" />
-            </android.support.design.widget.TextInputLayout>
+                    app:counterEnabled="true"
+                    app:counterMaxLength="20">
 
-            <Button
-                android:id="@+id/btn_check"
-                android:layout_width="wrap_content"
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tie_group_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/form_group_code" />
+                </android.support.design.widget.TextInputLayout>
+                <Button
+                    android:id="@+id/btn_check_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="확인"
+                    style="@style/Widget.AppCompat.Button.Colored" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="확인"
-                style="@style/Widget.AppCompat.Button.Colored" />
+                android:orientation="vertical"
+                android:id="@+id/linear_input_name">
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_group_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="20">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/tie_group_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/form_group_title" />
+                </android.support.design.widget.TextInputLayout>
+                <Button
+                    android:id="@+id/btn_check_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="확인"
+                    style="@style/Widget.AppCompat.Button.Colored" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
