--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -8,19 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ScrollView
+        <ListView
+            android:id="@+id/showchat"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="12"
-            android:background="@color/black">
-            <TextView
-                android:id="@+id/showchat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/gray"
-                android:textColor="@color/red"
-                android:textSize="20dp"/>
-        </ScrollView>
+            android:divider="#ffffff">
+        </ListView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
