Today부분 동기화, Memo 부분 추가
Today부분 동기화, Memo 부분 추가

--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -19,37 +19,55 @@
             app:dayOfWeekTextColor="@color/black"
             app:disabledDayBackgroundColor="@color/off_white"
             app:disabledDayTextColor="@color/gray"
-            app:selectedDayBackgroundColor="@color/blue"
+            app:selectedDayBackgroundColor="@color/gray"
             app:titleLayoutBackgroundColor="@color/white"
             app:weekLayoutBackgroundColor="@color/white"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/main_memo"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:gravity="center">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal"
-            android:minWidth="250dp">
-            <TextView
-                android:id="@+id/memo_text"
-                android:layout_width="200dp"
-                android:layout_height="100dp"
-                android:textColor="#FFFFFF"
-                android:gravity="center_vertical"/>
-            <ImageButton
-                android:id="@+id/memo_btn"
-                android:background="@null"
-                android:src="@android:drawable/ic_menu_edit"
-                android:layout_width="50dp"
-                android:layout_height="50dp"/>
+            android:layout_height="150dp"
+            android:orientation="vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/main_memo"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:minWidth="280dp">
+                <TextView
+                    android:id="@+id/memo_text"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="150dp"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:textColor="#00008B"
+                    android:gravity="center_vertical"/>
+
+                <ImageButton
+                    android:id="@+id/memo_btn"
+                    android:background="@null"
+                    android:layout_marginBottom="25dp"
+                    android:src="@android:drawable/ic_menu_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    />
+
+                <ImageButton
+                    android:id="@+id/memo_delete_btn"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_below = "@+id/memo_btn"
+                    android:background="@drawable/delete_memo"
+                    android:layout_width="30dp"
+                    android:layout_height="25dp"/>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
     </LinearLayout>
 </FrameLayout>
