--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -8,7 +8,7 @@
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="271dp"
         android:paddingRight="25dp"
         android:paddingBottom="25dp"
         android:background="@drawable/memo2"
@@ -58,7 +58,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이동"
+        android:text="Group"
         android:onClick="onClickGroupPage"
         android:layout_gravity="center_horizontal|bottom"/>
 
