--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -44,9 +44,9 @@
         <com.github.clans.fab.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/nickname"
+            android:src="@drawable/ic_create_white_24dp"
             app:fab_label="닉네임 만들기"
-            android:onClick="onClickNickName"/>
+            android:onClick="onClickNick"/>
         <com.github.clans.fab.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
