--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -33,7 +33,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:id="@+id/memoToday"/>
         </LinearLayout>
 
@@ -47,6 +46,12 @@
         android:layout_marginTop="250dp"
         android:id="@+id/showList">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="그룹 리스트"/>
+
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="200dp"
@@ -58,8 +63,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Group"
         android:onClick="onClickGroupPage"
+        android:background="@drawable/group_icon"
         android:layout_gravity="center_horizontal|bottom"/>
 
     <LinearLayout
