--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -8,13 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/showchat"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="12"
             android:divider="#ffffff">
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
