그룹버튼 변경, 시간표부분 listVIew로 변경, 시간표부분 동기화
그룹버튼 변경, 시간표부분 listVIew로 변경, 시간표부분 동기화

--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -12,21 +12,29 @@
         android:paddingRight="80dp"
         android:paddingBottom="25dp"
         android:background="@drawable/memo2"
-        android:scrollbarStyle="insideOverlay"
-        style="@android:style/Widget.DeviceDefault.ScrollView">
+        style="@android:style/Widget.DeviceDefault.ScrollView"
+        android:fillViewport="true"
+        android:clipToPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:id="@+id/showSchedule"
             android:layout_marginTop="85dp"
             android:layout_marginLeft="35dp"
             >
 
+            <ListView
+                android:layout_width="wrap_content"
+                android:id="@+id/schedulelist"
+                android:layout_height="180dp">
+            </ListView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/todayText"
                 />
 
@@ -49,47 +57,32 @@
         android:id="@+id/showList">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="387dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:textSize="25dp"
             android:gravity="center"
+            android:textSize="25dp"
             android:text="오늘의 명언" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="453dp"
             android:layout_height="wrap_content"
             android:id="@+id/todayFamoueSaying"
-            android:textSize="15dp"
             android:typeface="monospace"
-            android:textStyle="italic"
-            android:layout_marginLeft="5dp"
-            android:text="좌우명" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:text="좌우명"
+          />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:orientation="vertical"
-        android:id="@+id/todayLayout">
 
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    </LinearLayout>
 
     <Button
         android:layout_width="94dp"
         android:layout_height="110dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/group_button"
+        android:background="@drawable/group_icon"
         android:onClick="onClickGroupPage"
         android:layout_gravity="center_horizontal|bottom"/>
 
