--- a/app/src/main/res/layout/card_notice_header.xml
+++ b/app/src/main/res/layout/card_notice_header.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="공지"
         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
 </LinearLayout>
