--- a/app/src/main/res/layout/card_people_content.xml
+++ b/app/src/main/res/layout/card_people_content.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    app:cardBackgroundColor="#42A5F5"
+    app:contentPadding="5dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="3dp">
+<LinearLayout
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
@@ -14,5 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="#FFFFFF"
         android:layout_weight="5"/>
 </LinearLayout>
+</android.support.v7.widget.CardView>
