--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#9B26AF</color>
+
+    <!--<color name="colorAccent">#FF4081</color>-->
 
     <!--com.imanoweb.calendarview.CustomCalendarView Attributes-->
     <color name="white">#FFFFFF</color>
