--- a/app/src/main/res/layout/card_time_item.xml
+++ b/app/src/main/res/layout/card_time_item.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="300dp"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    app:contentPadding="10dp">
+
+    <LinearLayout
+        android:id="@+id/linear_time"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"/>
-</LinearLayout>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
